--- a/BEMProject/TestJupyterNotebook.ipynb
+++ b/BEMProject/TestJupyterNotebook.ipynb
@@ -11,8 +11,13 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Julia 1.7.1",
+   "language": "julia",
+   "name": "julia-1.7"
+  },
   "language_info": {
-   "name": "python"
+   "name": "julia"
   },
   "orig_nbformat": 4
  },
