--- a/BEMProject/TestJupyterNotebook.ipynb
+++ b/BEMProject/TestJupyterNotebook.ipynb
@@ -2,12 +2,64 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1×3 Matrix{Int64}:\n",
+       " 4  5  6"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Test Jupyter Notebook\n",
+    "#Do defined variables carry over?\n",
+    "A = [1 2 3]\n",
+    "B = [4 5 6]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×3 Matrix{Int64}:\n",
+       " 1  2  3\n",
+       " 4  5  6"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Test Jupyter Notebook"
+    "#Test variables\n",
+    "C = [A;B]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -17,9 +69,11 @@
    "name": "julia-1.7"
   },
   "language_info": {
-   "name": "julia"
-  },
-  "orig_nbformat": 4
+   "file_extension": ".jl",
+   "mimetype": "application/julia",
+   "name": "julia",
+   "version": "1.7.1"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
