--- a/BEMProject/BEMCCBladeNB.ipynb
+++ b/BEMProject/BEMCCBladeNB.ipynb
@@ -142,7 +142,7 @@
    ],
    "source": [
     "#Airfoil data\n",
-    "#Airfoil data needs to be imported, ie the lift and drag coef of the airfoil at each radial location\n",
+    "#Airfoil data needs to be imported, ie the lift and drag coef of the airfoil at different angles of attack (-pi to pi)\n",
     "af = AlphaAF(\"EpplerE63Data.txt\")   #this gives angle of attack, lift coefficient, drag coefficient\n",
     "#... the top row has header info, then reynolds number, then mach number, on a dif row each\n",
     "\n",
@@ -190,7 +190,7 @@
    "metadata": {},
    "source": [
     "**Define Operating Points** <br>\n",
-    "This defines what the flow field conditions are at each section. Each \"operating point\" has the velocity components, density, pitch, mu (dynamic viscosity), and the speed of sound (for the Mach number I think?)"
+    "This defines what the flow field conditions are at each section. Each \"operating point\" has the velocity components, density, pitch, mu (dynamic viscosity), and the speed of sound (for the Mach number I think)"
    ]
   },
   {
@@ -302,14 +302,14 @@
    "source": [
     "#Inputs\n",
     "nJ = 30     #number of advance ratios to evaluate\n",
-    "J = range(0.00001, .92, length = nJ) #creates a range of advance ratios from .1 to .6, what are normal vals?\n",
+    "J = range(0.00001, .92, length = nJ) #creates a range of advance ratios, what are normal vals?\n",
     "Omega = RPM*pi/30  #rpms to rad/sec \n",
     "n = Omega/(2*pi)    # converts radians persecond to just rotations per second, same as rpm/60\n",
-    "D = 2 * Rtip    #Diameter of the prop is 2* the radius, do I ignore the hub?\n",
+    "D = 2 * Rtip    #Diameter of the prop is 2* the radius (note: Rtip is defined from center of rotation so includes Rhub)\n",
     "\n",
     "eff = zeros(nJ)     #creates arrays for efficiency, coef of thrust, and coef of torque \n",
-    "CT = zeros(nJ)\n",
-    "CQ = zeros(nJ)      #coef of torque is requried torque over theoretical required torque\n",
+    "CT = zeros(nJ) #Coef of Thrust \n",
+    "CQ = zeros(nJ)      #coef of torque \n",
     "\n",
     "emptyvar = \"Ran\" #this supresses the output of whatever was last put in and validates that the cell ran"
    ]
@@ -1988,7 +1988,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a5fe36f",
+   "id": "27153a80",
    "metadata": {},
    "source": [
     "*Figure 3:* Experimental and theoretical efficiencies plotted at different advance ratios <br><br>\n",
@@ -1998,7 +1998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e81417c4",
+   "id": "69cd80a3",
    "metadata": {},
    "source": [
     "**Overall Results and Error Discusson** <br>\n",
@@ -2010,7 +2010,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "583e962a",
+   "id": "18781c8f",
    "metadata": {},
    "outputs": [],
    "source": []
