Final Trade Study Code (for now)

--- a/TradeStudy/TradeStudyMemo.tex
+++ b/TradeStudy/TradeStudyMemo.tex
@@ -91,4 +91,17 @@ What the USPTO can do is limited.
 
 \newpage
 \printbibliography
+
+\includegraphics[scale=.65]{./surfaces/RVarCTSurfacePlot}
+\includegraphics[scale=.65]{./surfaces/RVarCQSurfacePlot}
+\includegraphics[scale=.65]{./surfaces/RVarFMSurfacePlot}
+\includegraphics[scale=.65]{./surfaces/PVarCTSurfacePlot}
+\includegraphics[scale=.65]{./surfaces/PVarCQSurfacePlot}
+\includegraphics[scale=.65]{./surfaces/PVarFMSurfacePlot}
+\includegraphics[scale=.65]{./surfaces/CVarCTSurfacePlot}
+\includegraphics[scale=.65]{./surfaces/CVarCQSurfacePlot}
+\includegraphics[scale=.65]{./surfaces/CVarFMSurfacePlot}
+\includegraphics[scale=.65]{./surfaces/JVarCTSurfacePlot}
+\includegraphics[scale=.65]{./surfaces/JVarCQSurfacePlot}
+\includegraphics[scale=.65]{./surfaces/JVarFMSurfacePlot}
 \end{document}
